[package]
name = "hng13-stage2-country-currency-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-files = "0.6"

# Database (MySQL)
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal", "json"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Async Runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Random Numbers
rand = "0.8"

# Image Generation
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"